code review cleanup